Fix duplicate feature list for Tickets on smaller screens
Introduced by merge commit 40af71dddbcbb18ef0a6b365cff414380a402a24

--- a/web/components/TextBlock/Tickets/Tickets.module.css
+++ b/web/components/TextBlock/Tickets/Tickets.module.css
@@ -90,15 +90,6 @@
   text-decoration: line-through;
 }
 
-.ticketFeatures {
-  list-style-type: none;
-  padding: 24px;
-  border: 1px solid var(--color-brand-yellow);
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
-  margin-bottom: 8px;
-}
-
 .feature,
 .featurePresence {
   border: 1px solid var(--color-ui-gray-100);
